Update website content

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
     <div class="container">
       <div class="hero-content">
-        <h1>I'm <span class="typed" data-typed-items="Hannah Kim, a Computer Science student, an Aspiring Software Engineer, an Aspiring Software Developer"></span></h1>
-        <p>A Computer Science Student & An Aspiring Software Engineer / Developer</p>
+        <h1>Hi! I'm <span class="typed" data-typed-items="Hannah Kim, a Full Stack Developer, a Software Engineer, a New Grad"></span></h1>
+        <p>A Full-stack developer, A Software Engineer, A New Grad</p>
 
         <ul class="list-unstyled list-social">
           <li><a href="https://github.com/hannah-kim117?tab=repositories"><i class="bi bi-github"></i></a></li>
@@ -90,7 +90,7 @@
             <div class="about-descr">
 
               <p class="p-heading">I'm Hannah Kim, a student at Oreogon State University studying Computer Science.</p>
-              <p class="separator"> I have experience in front-end programming/UI and software development, and currently am taking rigorous technical courses at OSU that will help me gain valuable skill to further advance in my career as a software
+              <p class="separator"> I have experience in full-stack programming and software development, and currently am taking rigorous technical courses at OSU that will help me gain valuable skill to further advance in my career as a software
                 engineer.</p>
 
             </div>
@@ -123,34 +123,32 @@
               <div class="services-block">
                 <i class="bi bi-pencil-square"></i>
                 <span>WEB DESIGN</span>
-                <p class="separator">Created various websites using Javascript, HTML/CSS, and bootstrap </p>
+                <p class="separator">Created various websites using Javascript, React, and bootstrap </p>
               </div>
             </div><!-- End testimonial item -->
 
             <div class="swiper-slide">
               <div class="services-block">
-                <i class="bi bi-microsoft"></i>
-                <span>MICROSOFT SUITE</span>
-                <p class="separator">Mastered word, powerpoint, and excel</p>
+                <i class="bi bi-person-circle"></i>
+                <span>SERVICENOW</span>
+                <p class="separator">Designed and developed Catalog Items and enhanced NowMobile with QR auto-fill and UI improvements</p>
               </div>
             </div><!-- End testimonial item -->
 
             <div class="swiper-slide">
               <div class="services-block">
-                <i class="bi bi-cloud"></i>
-                <span>CREATIVE CLOUD</span>
-                <p class="separator">Experience with Adobe tools such as Premiere Pro and Illustrator</p>
+                <i class="bi bi-arrow-repeat"></i>
+                <span>FLASK</span>
+                <p class="separator">Built automation scripts and REST APIs using Flask to support data processing and backend services.</p>
               </div>
             </div><!-- End testimonial item -->
 
 
-            
-
             <div class="swiper-slide">
               <div class="services-block">
-                <i class="bi bi-filetype-html"></i>
-                <span>HTML/CSS/Javascript</span>
-                <p class="separator">Implemented main UI on various websites through the use of Javascript and HTML/CSS.</p>
+                <i class="bi bi-braces"></i>
+                <span>REACT.JS</span>
+                <p class="separator">My main frontend framework of choice</p>
               </div>
             </div><!-- End testimonial item -->
 
@@ -188,15 +186,127 @@
             <div class="col-lg-4 col-md-6">
               <div class="journal-info">
 
+                <a href="blog-single.html"><img src="assets/img/unlimited-audio-converter.jpg" class="img-responsive" alt="img"></a>
+
+                <div class="journal-txt">
+
+                  <h4><a href="https://github.com/hannah-kim117/audio_converter"> Full-Stack Web Project: Audio Converter & Event Finder</a></h4>
+                  <p class="separator">
+                    Developed a React.js-based frontend for an audio converter tool, enabling seamless WAV to MP3 conversion with
+ an optimized user experience. Built a backend microservice with Express.js to fetch and format event data from the SeatGeek API, enabling
+ seamless integration with partner interfaces.
+                  </p>
+
+                </div>
+
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="journal-info">
+
+                <a href="https://github.com/hannah-kim117/HashMap-Implementation"><img src="assets/img/braincompany_logo.jpeg" class="img-responsive" alt="img"></a>
+
+                <div class="journal-txt">
+
+                  <h4><a href="blog-single.html">Digitizer AI</a></h4>
+                  <p class="separator">
+                    Developed Digitizer AI, a full-stack web application that builds on a previous prototype to automate EEG electrode
+ detection from smartphone videos, enabling users to upload recordings, trigger AI-powered processing, and view
+ labeled results without manual input or specialized equipment. Collaborated within a team to build a video processing pipeline to extract frames from 360° scans, run CNN-based
+ electrode detection, and convert outputs into accurate labels, streamlining EEG setup for clinical and research use.
+                  </p>
+
+                </div>
+
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="journal-info">
+
+                <a href="blog-single.html"><img src="assets/img/rxmaestro.jpg" class="img-responsive" alt="img"></a>
+
+                <div class="journal-txt">
+
+                  <h4><a href="https://github.com/hannah-kim117/RxMaestro"> Rx Maestro</a></h4>
+                  <p class="separator">
+                    Collaborated in a team to build a web application with Drug Interaction API to cross-check specific drug
+ interactions, minimizing risks of severe drug-drug interactions for patients. Implemented a database solution to efficiently manage patient details, drug information, prescriptions, and
+ manufacturer data.
+                  </p>
+
+                </div>
+
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="journal-info">
+
+                <a href="https://github.com/openemr/openemr/pull/8118"><img src="assets/img/openemr_logo.png" class="img-responsive" alt="img"></a>
+
+                <div class="journal-txt">
+
+                  <h4><a href="blog-single.html"> OpenEMR Open Source Contribution- Code Refactor</a></h4>
+                  <p class="separator">
+                     Refactored JavaScript logic from PHP to an external file, improving maintainability and readability.
+                     Streamlined data handling by creating a structured phpData object for seamless and scalable PHP-to-JavaScript integration.
+                  </p>
+
+                </div>
+
+              </div>
+            </div>
+
+            
+
+            <div class="col-lg-4 col-md-6">
+              <div class="journal-info">
+
+                <img src="assets/img/budget.jpg" class="img-responsive" alt="img"></a>
+
+                <div class="journal-txt">
+
+                  <h4><a href="blog-single.html">Budgeting Mobile App Design</a></h4>
+                  <p class="separator">
+                    Challenged myself by using Figma to design a budgeting mobile application prototype, addressing functionality gaps found in Mint and offering users enhanced financial management capabilities. Led a team in directing and managing user-centered research utilizing heuristics, interviews, wireflows, and personas to improve the app’s design and functionality.
+                  </p>
+
+                </div>
+
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="journal-info">
+
+                <a href="https://github.com/hannah-kim117/HashMap-Implementation"><img src="assets/img/hashmap.jpg" class="img-responsive" alt="img"></a>
+
+                <div class="journal-txt">
+
+                  <h4><a href="blog-single.html">HashMap Implementation</a></h4>
+                  <p class="separator">
+                    Implemented a HashMap in Python 3 without the use of Python’s built-in methods or data structures.
+                    Executed via the use of Separate Chaining and Open Addressing with Quadratic Probing.
+                  </p>
+
+                </div>
+
+              </div>
+            </div>
+
+
+            <div class="col-lg-4 col-md-6">
+              <div class="journal-info">
+
                 <a href="blog-single.html"><img src="assets/img/to-do-list.png" class="img-responsive" alt="img"></a>
 
                 <div class="journal-txt">
 
                   <h4><a href="https://github.com/hannah-kim117/To-Do-List-Planner">To-Do List Planner Website</a></h4>
                   <p class="separator">
-                    Created an online planner website with React that allows users to make a customized to-do list by creating, editing,
-and deleting tasks.
-Utilized React components, hooks, and a full stack MERN app to create a scalable to-do planner.
+                    Created an online planner website with React that allows users to make a customized to-do list by creating, editing, and deleting tasks. Utilized React components, hooks, and a full stack MERN app to create a scalable to-do planner.
 
                   </p>
 
