fixed hrefs and intro

--- a/index.html
+++ b/index.html
@@ -89,9 +89,8 @@
           <div class="col-lg-7">
             <div class="about-descr">
 
-              <p class="p-heading">I'm Hannah Kim, a student at Oreogon State University studying Computer Science.</p>
-              <p class="separator"> I have experience in full-stack programming and software development, and currently am taking rigorous technical courses at OSU that will help me gain valuable skill to further advance in my career as a software
-                engineer.</p>
+              <p class="p-heading">Hi! I'm Hannah Kim, a recent Computer Science graduate from Oregon State University.</p>
+              <p class="separator"> I have professional experience in full-stack software development and recently graduated with a second bachelor's degree in Computer Science from Oregon State University. With a background in Pharmacy and Neuroscience, I bring a unique blend of technical expertise and healthcare insight to build dependable, user-friendly solutions.</p>
 
             </div>
 
@@ -186,7 +185,7 @@
             <div class="col-lg-4 col-md-6">
               <div class="journal-info">
 
-                <a href="blog-single.html"><img src="assets/img/unlimited-audio-converter.jpg" class="img-responsive" alt="img"></a>
+                <a href="https://github.com/hannah-kim117/audio_converter"><img src="assets/img/unlimited-audio-converter.jpg" class="img-responsive" alt="img"></a>
 
                 <div class="journal-txt">
 
@@ -205,11 +204,11 @@
             <div class="col-lg-4 col-md-6">
               <div class="journal-info">
 
-                <a href="https://github.com/hannah-kim117/HashMap-Implementation"><img src="assets/img/braincompany_logo.jpeg" class="img-responsive" alt="img"></a>
+                <a href="https://eeg-digitizer.app/"><img src="assets/img/braincompany_logo.jpeg" class="img-responsive" alt="img"></a>
 
                 <div class="journal-txt">
 
-                  <h4><a href="blog-single.html">Digitizer AI</a></h4>
+                  <h4><a href="https://eeg-digitizer.app/">Digitizer AI</a></h4>
                   <p class="separator">
                     Developed Digitizer AI, a full-stack web application that builds on a previous prototype to automate EEG electrode
  detection from smartphone videos, enabling users to upload recordings, trigger AI-powered processing, and view
@@ -225,7 +224,7 @@
             <div class="col-lg-4 col-md-6">
               <div class="journal-info">
 
-                <a href="blog-single.html"><img src="assets/img/rxmaestro.jpg" class="img-responsive" alt="img"></a>
+                <a href="https://github.com/hannah-kim117/RxMaestro"><img src="assets/img/rxmaestro.jpg" class="img-responsive" alt="img"></a>
 
                 <div class="journal-txt">
 
@@ -248,7 +247,7 @@
 
                 <div class="journal-txt">
 
-                  <h4><a href="blog-single.html"> OpenEMR Open Source Contribution- Code Refactor</a></h4>
+                  <h4><a href="https://github.com/openemr/openemr/pull/8118"> OpenEMR Open Source Contribution- Code Refactor</a></h4>
                   <p class="separator">
                      Refactored JavaScript logic from PHP to an external file, improving maintainability and readability.
                      Streamlined data handling by creating a structured phpData object for seamless and scalable PHP-to-JavaScript integration.
@@ -268,7 +267,7 @@
 
                 <div class="journal-txt">
 
-                  <h4><a href="blog-single.html">Budgeting Mobile App Design</a></h4>
+                  <h4><a>Budgeting Mobile App Design</a></h4>
                   <p class="separator">
                     Challenged myself by using Figma to design a budgeting mobile application prototype, addressing functionality gaps found in Mint and offering users enhanced financial management capabilities. Led a team in directing and managing user-centered research utilizing heuristics, interviews, wireflows, and personas to improve the app’s design and functionality.
                   </p>
@@ -285,7 +284,7 @@
 
                 <div class="journal-txt">
 
-                  <h4><a href="blog-single.html">HashMap Implementation</a></h4>
+                  <h4><a href="https://github.com/hannah-kim117/HashMap-Implementation">HashMap Implementation</a></h4>
                   <p class="separator">
                     Implemented a HashMap in Python 3 without the use of Python’s built-in methods or data structures.
                     Executed via the use of Separate Chaining and Open Addressing with Quadratic Probing.
@@ -300,7 +299,7 @@
             <div class="col-lg-4 col-md-6">
               <div class="journal-info">
 
-                <a href="blog-single.html"><img src="assets/img/to-do-list.png" class="img-responsive" alt="img"></a>
+                <a href="https://github.com/hannah-kim117/To-Do-List-Planner"><img src="assets/img/to-do-list.png" class="img-responsive" alt="img"></a>
 
                 <div class="journal-txt">
 
@@ -322,7 +321,7 @@
 
                 <div class="journal-txt">
 
-                  <h4><a href="blog-single.html">HashMap Implementation</a></h4>
+                  <h4><a href="https://github.com/hannah-kim117/HashMap-Implementation">HashMap Implementation</a></h4>
                   <p class="separator">
                     Implemented a HashMap in Python 3 without the use of Python’s built-in methods or data structures.
                     Executed via the use of Separate Chaining and Open Addressing with Quadratic Probing.
@@ -340,7 +339,7 @@
 
                 <div class="journal-txt">
 
-                  <h4><a href="blog-single.html">TinDog Website</a></h4>
+                  <h4><a href="https://github.com/hannah-kim117/Tin-Dog-Website/tree/master">TinDog Website</a></h4>
                   <p class="separator">
                     Implemented and designed a fun hypothetical dating website made specifically for dogs.
                     Maximized the use of front-end developing tools and languages.
@@ -359,7 +358,7 @@
 
                 <div class="journal-txt">
 
-                  <h4><a href="blog-single.html">Dicee Game</a></h4>
+                  <h4><a href="https://github.com/hannah-kim117/Dicee-Game">Dicee Game</a></h4>
                   <p class="separator">Instituted a quick and fun dice game which allows users to decide who goes first for any game
                   </p>
 
@@ -424,7 +423,7 @@
             <img src="assets/img/fashion.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Fashion</h4>
-              <p>Photos of everyday outfits I wear with details </p>
+              <p>Photos of everyday outfits I wear with deets </p>
 
             </div>
           </div>
@@ -518,7 +517,7 @@
 
       </div>
 
-      <p>&copy; Hannah Kim 2023</p>
+      <p>&copy; Hannah Kim 2025</p>
 
 
 
